[gd_scene load_steps=3 format=3 uid="uid://dnimbd6idqvm7"]

[ext_resource type="Script" path="res://Objects/Scripts and Scenes/UI/InventoryDraggableItem.gd" id="1_i3ac5"]
[ext_resource type="Texture2D" uid="uid://bdyqvrp3w7po4" path="res://Resources/Sprites/Floppy Disks/Floppy Disk Base.png" id="2_g8t3h"]

[node name="InventoryDraggableItem" type="Node2D"]
script = ExtResource("1_i3ac5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_g8t3h")

[node name="Mouse Region" type="Button" parent="Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -16.0
offset_right = -18.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="Hover Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="mouse_released" from="." to="." method="_on_mouse_released"]
[connection signal="mouse_entered" from="Sprite2D/Mouse Region" to="." method="_on_mouse_region_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Mouse Region" to="." method="_on_mouse_region_mouse_exited"]
[connection signal="pressed" from="Sprite2D/Mouse Region" to="." method="_on_mouse_region_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Hover Timer" to="." method="_on_hover_timer_timeout"]
